--- a/author.hbs
+++ b/author.hbs
@@ -1,12 +1,14 @@
 {{!< default}}
 
 {{! The main content area on the homepage }}
-<main role="main" class="{{#if @blog.cover}} custom-bg{{else}} default-bg{{/if}}"{{#if @blog.cover}} style="background-image: url({{@blog.cover}})"{{/if}}>
+<main role="main" class="{{#if @blog.cover}} custom-bg{{else}} default-bg{{/if}}"{{#if @blog.cover}} style="background-image: url({{@blog.cover}})"{{/if}}>    
     <div class="main__wrapper">
     {{> menu}}
-
-        <h2 class="main__header">Tag archive: <span class="main__header--tagname">{{tag.name}} ({{pagination.total}})</span></h2>
-
+    
+        {{#author}}
+        <h2 class="main__header">Posts by: <span class="main__header--username">{{name}} ({{plural ../pagination.total empty='No posts' singular='% post' plural='% posts'}})</span></h2>
+        {{/author}}
+        
         {{! Each post will be output using this markup }}
         {{#foreach posts}}
         <article class="{{post_class}} post__wrapper" data-cols="4">
