--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -9,7 +9,7 @@
 	</div>
 
     <div class="footer__copyrights">
-         <p class="footer__text footer__copyright-text">All content copyright <a href="{{@blog.url}}/">{{@blog.title}}</a> &copy; {{date format="YYYY"}} &bull; All rights reserved. Designed by <a href="http://www.gavick.com">GavickPro</a></p>
+         <p class="footer__text footer__copyright-text">All content copyright <a href="{{@blog.url}}/">{{@blog.title}}</a> &copy; {{date format="YYYY"}} &bull; All rights reserved. Designed by <a href="http://www.gavick.com" rel="nofollow">GavickPro</a></p>
          <p class="footer__text footer__powered-by">Proudly published with <a class="footer__ghost-icon" href="http://ghost.org">Ghost</a></p>
     </div>
 </footer>
