--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,8 +1,8 @@
 /*---------------------------------
 
  Portfolio Ghost Theme by GavickPro
-           07-10-2014
-             v.1.2.0
+           27-11-2014
+             v.1.2.1
 
 - - - - - - - - - - - - - - - - - -
 
@@ -337,6 +337,7 @@ main {
 	-moz-box-shadow: 0 0 13px rgba(0, 0, 0, .07);
 	-ms-box-shadow: 0 0 13px rgba(0, 0, 0, .07);
 	box-shadow: 0 0 13px rgba(0, 0, 0, .07);
+	cursor: pointer;
 	height: 380px;
 	overflow: hidden;
 	opacity: 0;
