--- a/page.hbs
+++ b/page.hbs
@@ -2,7 +2,9 @@
 
 <main role="main">
     <div class="main__wrapper">
-        {{> menu}}
+        {{#if @blog.navigation}}
+        	{{navigation}}
+        {{/if}}
 
         {{! Everything inside the #post tags pulls data from the post }}
         <article class="{{post_class}}">
