--- a/index.hbs
+++ b/index.hbs
@@ -3,7 +3,9 @@
 {{! The main content area on the homepage }}
 <main role="main" class="{{#if @blog.cover}} custom-bg{{else}} default-bg{{/if}}"{{#if @blog.cover}} style="background-image: url({{@blog.cover}})"{{/if}}>
     <div class="main__wrapper">
-    {{> menu}}
+    {{#if @blog.navigation}}
+    	{{navigation}}
+    {{/if}}
 
         {{! Each post will be output using this markup }}
         {{#foreach posts}}
