--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -541,14 +541,10 @@ main {
 	-moz-box-shadow: 0 0 13px rgba(0, 0, 0, .07);
 	-ms-box-shadow: 0 0 13px rgba(0, 0, 0, .07);
 	box-shadow: 0 0 13px rgba(0, 0, 0, .07);
-	margin: 0 auto;
-	padding: 72px 72px 20px 72px;
-	width: 700px;
-}
-
-.author {
 	margin: 42px auto;
+	min-height: 145px;
 	padding: 32px 72px;
+	width: 700px;
 }
 
 .author__avatar {
