--- a/default.hbs
+++ b/default.hbs
@@ -43,6 +43,12 @@
     {{! Ghost outputs important scripts and data with this tag }}
     {{ghost_foot}}
 
+    <script type="text/javascript">  
+    if (typeof jQuery == 'undefined') {
+  	document.write('<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></'+'script>');
+    }
+    </script>
+
     <script type="text/javascript" src="{{asset "js/jquery.fitvids.js"}}"></script>
     <script type="text/javascript" src="{{asset "js/index.js"}}"></script>
 
