Fix for the non-working fitVids

--- a/default.hbs
+++ b/default.hbs
@@ -68,6 +68,10 @@
       s.src = '//' + disqus_shortname + '.disqus.com/count.js';
       (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
       }());
+      
+      jQuery(document).ready(function(){
+            jQuery(document).fitVids();
+      });
     </script>
 </body>
 </html>
