--- a/author.hbs
+++ b/author.hbs
@@ -1,7 +1,7 @@
 {{!< default}}
 
 {{! The main content area on the homepage }}
-<main role="main" class="{{#if @blog.cover}} custom-bg{{else}} default-bg{{/if}}"{{#if @blog.cover}} style="background-image: url({{@blog.cover}})"{{/if}}>    
+<main role="main" class="{{#if @blog.cover}} custom-bg{{else}} default-bg{{/if}}"{{#if @blog.cover}} style="background-image: url({{@blog.cover_image}})"{{/if}}>    
     <div class="main__wrapper">
     {{#if @blog.navigation}}
     	{{navigation}}
@@ -16,7 +16,7 @@
         <article class="{{post_class}} post__wrapper" data-cols="4">
             <div class="post__wrapper_helper post__wrapper_helper--notloaded el__transition">
                 {{#if image}}
-                	<img src="{{image}}" alt="{{{title}}}" class="post__image_to_load" />
+                	<img src="{{img_url feature_mage}}" alt="{{{title}}}" class="post__image_to_load" />
                 {{/if}}
 
                 <div class="post__preview el__transition">    
