--- a/page.hbs
+++ b/page.hbs
@@ -16,7 +16,7 @@
             <div class="post__wrapper--subpage">    
                 {{#if image}}
                 	<div class="post__media">
-                		<img src="{{image}}" alt="{{{title}}}" />
+                		<img src="{{img_url feature_mage}}" alt="{{{title}}}" />
                 	</div>
                 {{/if}}
 
