--- a/page.hbs
+++ b/page.hbs
@@ -14,9 +14,9 @@
             {{/contentFor}}
 
             <div class="post__wrapper--subpage">    
-                {{#if image}}
+                {{#if feature_image}}
                 	<div class="post__media">
-                		<img src="{{img_url feature_mage}}" alt="{{{title}}}" />
+                		<img src="{{img_url feature_image}}" alt="{{{title}}}" />
                 	</div>
                 {{/if}}
 
